refactor($RacingGame): refactor RacingGame
Refactor $RacingGame:
- use List.of instead of Arrays.asList
- refactor API use